--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material/button": "^5.1.0",
+    "@material/top-app-bar": "^5.1.0",
     "express": "^4.16.4",
-    "hbs": "^4.0.1",
+    "hbs": "^4.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "request": "^2.88.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bluesaber79/node3-weatherwebsite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Bluesaber79/node3-weatherwebsite/issues"
+  },
+  "homepage": "https://github.com/Bluesaber79/node3-weatherwebsite#readme",
+  "description": ""
 }
